--- a/.env
+++ b/.env
@@ -5,4 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://docker:docker@localhost:5432/ninder?schema=public"
-JWT_SECRET='secret'
+TOKEN_SECRET='secret'
+TOKEN_EXPIRATION='20s'
+REFRESH_TOKEN_SECRET='refreshsecret'
+REFRESH_TOKEN_EXPIRATION=15
