refactor: updating secretskey to access and refresh token

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://docker:docker@localhost:5432/ninder?schema=public"
-TOKEN_SECRET='secret'
-TOKEN_EXPIRATION='20s'
-REFRESH_TOKEN_SECRET='refreshsecret'
-REFRESH_TOKEN_EXPIRATION=15
+TOKEN_SECRET='d33552e19e8fd8025222346ba231e312'
+TOKEN_EXPIRATION='1d'
+REFRESH_TOKEN_SECRET='c3ab19818b210f42861be9bffba33feb'
+REFRESH_TOKEN_EXPIRATION=7
